--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-    </data>
+    <data/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -24,18 +24,24 @@
             android:gravity="center"
             android:layout_marginBottom="16dp">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnAddReview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Add Review"
-                android:layout_marginEnd="16dp" />
+                android:textColor="@android:color/white"
+                app:backgroundTint="@color/colorPrimary"
+                android:layout_marginEnd="16dp"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnMyReviews"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My Reviews" />
+                android:textColor="@android:color/white"
+                app:backgroundTint="@color/colorPrimary"
+                android:text="My Reviews"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
         </LinearLayout>
     </LinearLayout>
 </layout>
