--- a/app/src/main/res/layout/fragment_edit_review.xml
+++ b/app/src/main/res/layout/fragment_edit_review.xml
@@ -100,7 +100,8 @@
                 android:layout_height="wrap_content"
                 android:numStars="5"
                 android:stepSize="0.5"
-                android:rating="0" />
+                android:rating="0"
+                android:theme="@style/GoldRatingBarStyle" />
         </LinearLayout>
 
         <com.google.android.material.card.MaterialCardView
