--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,10 @@
     <color name="teal_700">#018786</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#800020</color>
     <color name="colorPrimaryVariant">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="button_enabled_bg">@color/colorPrimary</color>
     <color name="button_disabled_bg">#BDBDBD</color>
+    <color name="GoldRatingBarTheme">#FFD700</color>
 </resources>
