--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -31,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Edit Profile"
+                android:textColor="?attr/colorOnSurface"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="24dp"/>
@@ -41,6 +42,7 @@
                 android:hint="First name"
                 app:boxBackgroundMode="outline"
                 app:boxCornerRadiusTopStart="8dp"
+                android:textColor="?attr/colorOnSurface"
                 app:boxCornerRadiusTopEnd="8dp"
                 app:boxCornerRadiusBottomStart="8dp"
                 app:boxCornerRadiusBottomEnd="8dp"
@@ -51,6 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
+                    android:textColor="?attr/colorOnSurface"
                     android:textSize="16sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -61,6 +64,7 @@
                 app:boxBackgroundMode="outline"
                 app:boxCornerRadiusTopStart="8dp"
                 app:boxCornerRadiusTopEnd="8dp"
+                android:textColor="?attr/colorOnSurface"
                 app:boxCornerRadiusBottomStart="8dp"
                 app:boxCornerRadiusBottomEnd="8dp"
                 android:layout_marginBottom="24dp">
@@ -69,6 +73,7 @@
                     android:id="@+id/editTextLastName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/colorOnSurface"
                     android:inputType="textPersonName"
                     android:textSize="16sp" />
             </com.google.android.material.textfield.TextInputLayout>
