--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -147,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:text="3.5/5"
                 android:textSize="16sp"
-                android:textColor="?attr/colorOnSurfaceVariant" />
+                android:textColor="?attr/colorOnSurface" />
         </LinearLayout>
 
     </LinearLayout>
